[package]
name = "planetary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
libsqlite3-sys = "^0"
sea-query = { version = "^0", features = [ "sqlx-sqlite", "backend-sqlite", "derive" ] }
sqlx = { version = "^0", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
futures = "^0"

[[bin]]
name = "planetary"
src = "src/planetary/main.rs"

[[bin]]
name = "ptags"
src = "src/ptags/main.rs"

[[bin]]
name = "ptags2html"
src = "src/ptags2html/main.rs"
